--- a/Credit Card Transactions Dataset/Credit Card Transactions Dataset.ipynb
+++ b/Credit Card Transactions Dataset/Credit Card Transactions Dataset.ipynb
@@ -21,7 +21,7 @@
     "    </h1>\n",
     "    <div style=\"text-align:center;\">\n",
     "        <a href=\"https://www.sak.kesug.com\">\n",
-    "            <img src=\"https://media.licdn.com/dms/image/v2/D4E03AQEa6oE6JdFbTQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1729333367804?e=1741219200&v=beta&t=gCWp1Yr18TkOP3af6-g-2vsRVJgvkvzbnnusC-YDqUc\" style=\"width: 20%; border-radius: 50%;\" alt=\" Hafiz Kalim Ullah\">\n",
+    "            <img src=\"https://media.linkedin.com/dms/image/v2/D4E03AQEa6oE6JdFbTQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1729333367804?e=1741219200&v=beta&t=gCWp1Yr18TkOP3af6-g-2vsRVJgvkvzbnnusC-YDqUc\" style=\"width: 20%; border-radius: 50%;\" alt=\" Hafiz Kalim Ullah\">\n",
     "        </a>\n",
     "    </div>\n",
     "    <h2 style=\"font-size:20px; font-family:Georgia, serif; color:#333; text-align:center;\">Mr.Hafiz Kalim Ullah</h2>\n",
